src/test/deca/context/invalid/declClass-notClassHerited.context
declClass-notClassHerited.deca:10: